Updated cert script and secure client/server code

--- a/secure_hello/CMakeLists.txt
+++ b/secure_hello/CMakeLists.txt
@@ -10,8 +10,8 @@ PROTOBUF_GENERATE_GRPC_CPP(GRPC_SRCS GRPC_HDRS ${ProtoFiles})
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
-add_executable(secure_hello_server ${PROTO_SRCS} ${PROTO_HDRS} ${GRPC_SRCS} ${GRPC_HDRS} server.cpp server1_cert.c server1_key.c test_root_cert.c)
-add_executable(secure_hello_client ${PROTO_SRCS} ${PROTO_HDRS} ${GRPC_SRCS} ${GRPC_HDRS} client.cpp server1_cert.c server1_key.c test_root_cert.c)
+add_executable(secure_hello_server ${PROTO_SRCS} ${PROTO_HDRS} ${GRPC_SRCS} ${GRPC_HDRS} server.cpp )
+add_executable(secure_hello_client ${PROTO_SRCS} ${PROTO_HDRS} ${GRPC_SRCS} ${GRPC_HDRS} client.cpp )
 
 target_link_libraries(secure_hello_server ${CMAKE_THREAD_LIBS_LINIT} ${PROTOBUF_LIBRARIES} ${GRPC_LIBRARIES})
 target_link_libraries(secure_hello_client ${CMAKE_THREAD_LIBS_LINIT} ${PROTOBUF_LIBRARIES} ${GRPC_LIBRARIES})
